force-app/main/default/objects/Idv_Achievement_Wizard_Form_Config__mdt/Idv_Achievement_Wizard_Form_Config__mdt.object-meta.xml
<CustomObject>
    <label>Idv Achievement Wizard Form Config</label>
    <pluralLabel>Idv Achievement Wizard Form Configs</pluralLabel>
</CustomObject>