force-app/main/default/objects/Idv_Achievement_Wizard_Form_Config__mdt/fields/Agreement_Label__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Label__c</fullName>
    <label>Agreement Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>