force-app/main/default/objects/Idv_Achievement_Wizard_Form_Config__mdt/fields/Agreement_Recognition_Label__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Recognition_Label__c</fullName>
    <label>Agreement Recognition Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>