force-app/main/default/objects/Idv_Achievement_Wizard_Form_Config__mdt/fields/Agreement_Required__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Required</label>
    <type>Checkbox</type>
</CustomField>