force-app/main/default/objects/Idv_Achievement_Wizard_Form_Config__mdt/fields/Composite_Key__c.field-meta.xml
<CustomField>
    <fullName>Composite_Key__c</fullName>
    <description>The combination of fields that make up the composite key e.g., {Field_A__c}_{Field_B__c}</description>
    <label>Composite Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>