force-app/main/default/objects/Idv_Achievement_Wizard_Form_Config__mdt/fields/Composite_Key_Value__c.field-meta.xml
<CustomField>
    <fullName>Composite_Key_Value__c</fullName>
    <label>Composite Key Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>