force-app/main/default/objects/Idv_Achievement_Wizard_Form_Config__mdt/fields/Department_Fallback_Field__c.field-meta.xml
<CustomField>
    <fullName>Department_Fallback_Field__c</fullName>
    <label>Department Fallback Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>