force-app/main/default/objects/Idv_Achievement_Wizard_Form_Config__mdt/fields/Department_Label__c.field-meta.xml
<CustomField>
    <fullName>Department_Label__c</fullName>
    <label>Department Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>