force-app/main/default/objects/Idv_Achievement_Wizard_Form_Config__mdt/fields/Department_Required__c.field-meta.xml
<CustomField>
    <fullName>Department_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Department Required</label>
    <type>Checkbox</type>
</CustomField>