force-app/main/default/objects/Idv_Achievement_Wizard_Form_Config__mdt/fields/Show_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Show_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Agreement</label>
    <type>Checkbox</type>
</CustomField>