force-app/main/default/objects/Idv_Achievement_Wizard_Form_Config__mdt/fields/Show_Agreement_Recognition__c.field-meta.xml
<CustomField>
    <fullName>Show_Agreement_Recognition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Agreement Recognition</label>
    <type>Checkbox</type>
</CustomField>