force-app/main/default/objects/Idv_Achievement_Wizard_Form_Config__mdt/fields/Show_Department__c.field-meta.xml
<CustomField>
    <fullName>Show_Department__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Department</label>
    <type>Checkbox</type>
</CustomField>