force-app/main/default/objects/Idv_Achievement_Wizard_Form_Config__mdt/fields/Show_Unit_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Show_Unit_Name_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Unit Name Field</label>
    <type>Checkbox</type>
</CustomField>