force-app/main/default/objects/Idv_Achievement_Wizard_Form_Config__mdt/fields/Unit_Additional_Info_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>Unit_Additional_Info_Field_Set__c</fullName>
    <label>Unit Additional Info Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>