force-app/main/default/objects/Idv_Achievement_Wizard_Form_Config__mdt/fields/Unit_Name_Fallback_Field__c.field-meta.xml
<CustomField>
    <fullName>Unit_Name_Fallback_Field__c</fullName>
    <label>Unit Name Fallback Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>