force-app/main/default/objects/Idv_Achievement_Wizard_Form_Config__mdt/fields/Unit_Required__c.field-meta.xml
<CustomField>
    <fullName>Unit_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit Required</label>
    <type>Checkbox</type>
</CustomField>