force-app/main/default/objects/Idv_Achievement_Wizard_Form_Config__mdt/fields/Unit_Table_Fields__c.field-meta.xml
<CustomField>
    <fullName>Unit_Table_Fields__c</fullName>
    <label>Unit Table Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>