force-app/main/default/objects/Idv_Achievement_Wizard_Form_Config__mdt/fields/Wizard_Config__c.field-meta.xml
<CustomField>
    <fullName>Wizard_Config__c</fullName>
    <label>Wizard Config</label>
    <referenceTo>Wizard_Config__mdt</referenceTo>
    <relationshipLabel>Idv Achievement Wizard Form Configs</relationshipLabel>
    <relationshipName>Idv_Achievement_Wizard_Form_Configs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>