force-app/main/default/objects/Idv_Achievement_Wizard_Form_Config__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Composite_Key__c</columns>
    <columns>Show_Agreement__c</columns>
    <columns>Agreement_Label__c</columns>
    <columns>Agreement_Required__c</columns>
    <columns>Show_Department__c</columns>
    <columns>Department_Label__c</columns>
    <columns>Department_Required__c</columns>
    <columns>Show_Agreement_Recognition__c</columns>
    <columns>Agreement_Recognition_Label__c</columns>
    <columns>Agreement_Recognition_Required__c</columns>
    <columns>Show_Unit_Table__c</columns>
    <columns>Unit_Required__c</columns>
    <columns>Default__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>